@@ -1,55 +1,35 @@
-# In your own words what is the JVM?
+#Which one of the following refers to an end to end test?  
+c) System test
 
-Is the application in charge of running Java code inside any machine.
-It takes the Java precompiled code created from the Java compiler and translates it to the corresponding machine code to the OS in which it is running.
+#Which statement is true? 
+c) JUnit is a framework to create unit tests.
 
-# What about JIT? What is it?
+#Is it true that the convention in Java is to create a unit test class associated with whatever class you are trying to test? Please elaborate on answer. 
 
-(Just In Time) It's a compiler inside the JVM which is responsible for compiling the bytecode from methods when they're called. Usually the JVM has a count on every called method and when this count is big the method compiled code is saved to save time when the JVM starts.
+It's true, the convention is to create a class normally on a different package called Test, where the name of the class is related with the name of the class being tested, for example a correct name for a test of a class called Circle.java would be CircleTest.java.
 
-# How can you execute GC?
+#Is it better to name the test methods according to the number order to keep methods name short and organized? i.e. testMethod1, testMethod2, etc. Please elaborate on answer.
 
-It normally runs on thebackground of the JVM being called whenever is needed.
-However you can start the execution inside your code using the method System.gc()
+No, it's better to have more elaborate names than indicates what is the method testing, this way it would be easier to identify and report the passed or failed features of the program.
 
-# What are the downsides of GC?
+#Talking about the structure of tests, what does the ‘given’ clause establish? 
+a) The preconditions for the test.
 
-* If run as a single thread the GC can cause the program to stop while the GC is running
-* It may cause problems on the performance of the application 
+#The ‘then’ clause can be considered as the asserts section in our code? Please elaborate on answer.
 
-# In few words what can you say about the heap space?
+Yes, it will display the expected results for our testing methods where we place the posible results for every test.
 
-It's the space in memory where the references to objects are stored, it's usually divided in a Young and Old Generation.
+#You should test the implementation rather than the behavior of your application? Please elaborate on answer.
 
-# What about PermGen? How to increase?
+No, you should test the behavior by testing the public API for the application by accessing only the public methods inside it to make sure they work as they should.
 
-It's a Generation inside the memory that allocates mostly classes or objects that will not be deleted even if the GC runs.
-It can be increase using the following command: -XX:MaxPermSize=[value]
+#Accessing private members of your class while testing is considered sometimes as a good practice as it allows the developer to test deeper in the code? Please elaborate on answer
 
-# How to increase Java heap?
+This is true if the private members are supposed to be used by public methods for example getter methods that have already been stablished, if the private members do not have a public way to acces them then you shouldn't try to access them on your test.
 
-Using the following command: -Xmxn
+#Which statement is true? 
+d) All of above.
 
-Where n is a multiple of 1024 that represents the desired space for PermGen, this must be greater than 2MB. Letters K or M can be added to indicate kilo or mega bytes.
+#One of the main characteristics of TDD is to write tests even before writing the actual code. Please elaborate on answer.
 
-# Explain Hotspot Heap structure
-
-The Heap space is divided in to Generations:
-
-* Young: Space of memory dedicated for objects that may be temporary, divided on Eden and to Survivor spaces.
-
-..* Eden: Every object is first stored in here, once full the GC runs.
-
-..* Survivor: When surviving a GC run on Eden objects are transered here, there are to Survivor spaces to swap and defragment the memory inside Survivor.
-
-* Old Generation: Every object that survived an specific number of GC runs will be inmediately stored here where the GC takes more time to run again.
-
-
-# Give two scenarios where you can get an OutOfMemoryError error
-
-* When the Heap space is completely full
-* When the PermGen is completely full
-
-# How can VM technology be beneficial for slow programs? 
-
-Having a VM will a single program to be run on every machine not matter of the OS installed. Besides giving control of GC to the machine allows the user to not worry for the memory management and just focus on the functionality.
+This is true, the porpuse of TDD is to first have an expected functionality for our application before starting to code the application, after having this expected functionality we can create tests that would prove the correct function of the application. Then we will create code making sure the tests are passed correctly generating ony the code enough to pass the test and not wasting time on code that won't improve the function of the application.
